# Swarlipi-AI

./: .gitignore  Launch SwarLipi AI.bat  README.md  Troubleshoot SwarLipi AI.bat  design.txt  docker-compose.yml  prd.txt  run_swarlipi.ps1  tech_stack.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  swarlipi.db
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/routes/: auth.py  projects.py  raga.py  scores.py  transcribe.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1b176d43ce09_initial_migration.py  ba510eca5a43_standardize_field_names_to_url.py
backend/app/models/: __init__.py  project.py  stem.py  user.py
backend/app/schemas/: __init__.py  project.py  raga.py  score.py  user.py
backend/app/tasks/: celery_app.py  ingestion_task.py  separation_task.py  transcription_task.py
backend/app/utils/: audio.py  storage.py
backend/data/: raga_dictionary.json
docs/: swarlipi_implementation_plan.md  swarlipi_task_list.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/ragas/: page.tsx
frontend/components/score/: SargamRenderer.tsx  StaffNotation.tsx
frontend/components/studio/: TrackMixer.tsx
frontend/components/ui/: SystemStatus.tsx
frontend/components/upload/: FileUpload.tsx
frontend/lib/: api.ts
(+1 files in other folders)
